# potpie

./: .codespellrc  .coverage  .dockerignore  .env  .env.template  .git-credentials-helper.sh  .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  ANALYTICS_API_QUICKSTART.md  CACHE_SETUP.md  CI_CD_GAP_REPORT.md  CI_CD_IMPROVEMENT_PLAN.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTEXT_CLI_PUBLISHING.md  Devdockerfile  ENV_CHANGES_PRODUCTION.md  GETTING_STARTED.md  GITHUB_SETUP.md  Jenkinsfile  Jenkinsfile_API  Jenkinsfile_CELERY  Jenkinsfile_Convo  MEDIA_IMPLEMENTATION_SUMMARY.md  Makefile  PR_DESCRIPTION.md  README.md  add_feature.md  api.Dockerfile  benchmark.csv  celery-api-supervisord.conf  celery.Dockerfile  colgrep_changes_summary.md  compose.yaml  context_graph_history.md  contributing.md  convo.Dockerfile  copy_workflow_code.sh  (+40 more)
app/src/context-engine/: .env.cli  AGENT_RECONCILIATION_PLAN.md  FEATURES_AND_CAPABILITIES.md  INGESTION_ASYNC_PLAN.md  LEAN_LEDGER_CUTOVER.md  POT_SCOPE_PLAN.md  POT_TENANCY_IMPLEMENTATION_PLAN.md  POT_TENANCY_REVIEW_CHANGES.md  README.md  examples.md  pyproject.toml
app/src/integrations/: pyproject.toml
app/src/observability/: pyproject.toml
app/src/parsing/: Cargo.toml  README.md  pyproject.toml
app/src/sandbox/: pyproject.toml
cli/: .gitignore  README.md  __init__.py  contributing.md  potpie_cli.py  pyproject.toml  setup.py
cli/example/: example.md
cli/potpie/: api_wrapper.py  utility.py
cli/src/potpie/: api_wrapper.py  main.py  server_manager.py  utility.py
cli/test/: test_api_wrapper.py  test_server_manager.py  test_utility.py
context-engine/: README.md  pyproject.toml
context-engine/src/bootstrap/: container.py  http_projects.py
context-engine/src/domain/: entity_schema.py  episode_formatters.py
context-engine/tests/unit/: test_mcp_project_access.py
potpie/context-core/: pyproject.toml
potpie/context-core/tests/: conftest.py
potpie/context-engine/: .coverage  .gitignore  README.md  build_config_values.py  distribution_defaults_hook.py  hatch_build.py  oauth_client_id_injection_hook.py  pyproject.toml
potpie/context-engine/benchmarks/: README.md  __init__.py  __main__.py  cli.py  dataset.py  evaluator.py  models.py  retrieval_eval.py  runner.py  runners.py
potpie/context-engine/bootstrap/: cli_auth_wiring.py  container.py  env_bootstrap.py  env_pots.py  host_wiring.py  ingestion_server.py  logging_setup.py  observability_context.py  observability_proxy.py  observability_wiring.py  potpie_path.py  queue_factory.py  runtime_settings.py  sentry_metrics_runtime.py  sentry_settings.py  standalone_container.py
potpie/context-engine/domain/: actor.py  agent_context_port.py  agent_envelope.py  belief.py  canonical_label_inference.py  coherence.py  context_records.py  context_status.py  deterministic_extractors.py  embedding_modes.py  entity_canonicalization.py  entity_schema.py  episode_formatters.py  errors.py  event_playbooks.py  extraction_edges.py  graph_contract.py  graph_history.py  graph_inbox.py  graph_mutations.py  graph_plans.py  graph_quality.py  graph_query.py  graph_views.py  graph_workbench.py  graph_workbench_ontology.py  hatchet_events.py  ingestion_db_status.py  ingestion_event_models.py  ingestion_kinds.py  ingestion_step_db_status.py  intelligence_policy.py  intelligence_signals.py  lifecycle.py  linear_events.py  llm_reconciliation.py  nudge.py  ontology.py  ontology_classifier.py  path_scope.py  (+9 more)
potpie/context-engine/host/: __init__.py  daemon.py  daemon_client.py  daemon_main.py  daemon_rpc.py  shell.py
potpie/context-engine/scripts/: BENCHMARK.md  benchmark_context_engine.py  context_engine_lab.py  generate-potpie-ascii.mjs  generate_agent_contract.py  mock_context_data.json
potpie/context-engine/tests/: _auth_fakes.py  conftest.py
potpie/integrations/: README.md  pyproject.toml
potpie/integrations/integrations/: logging.py
potpie/integrations/tests/: conftest.py  test_logging.py
potpie/observability/: README.md  pyproject.toml
potpie/observability/observability/: __init__.py  config.py  profiles.py  redaction.py
potpie/observability/tests/: test_sentry_privacy.py  test_sentry_profile.py  test_sentry_rate_limit.py  test_sentry_sink.py  test_sentry_staging_smoke.py
potpie/parsing/: .gitignore  Cargo.toml  README.md  parsing_rs.py  parsing_rs.pyi  pyproject.toml
potpie/parsing/graph_construction/: code_graph_service.py  parsing_controller.py  parsing_schema.py
potpie/parsing/knowledge_graph/: inference_schema.py
potpie/parsing/parsing/: __init__.py  py_graph.py
potpie/parsing/services/: cache_cleanup_service.py  inference_cache_service.py
potpie/parsing/src/: git.rs  lib.rs  tag_extract.rs
potpie/parsing/tasks/: cache_cleanup_tasks.py
potpie/parsing/tests/: fff_search_contract.rs  fff_search_workspace.rs  test_fff_search_rs.py  test_git_rs.py  test_py_graph.py
potpie/parsing/utils/: __init__.py  content_hash.py  encoding_detector.py  encoding_patch.py
potpie/sandbox/: README.md  docker-compose.yml  pyproject.toml
potpie/sandbox/scripts/: daytona_local.py  sandbox_cli.py  setup-daytona-local.sh
pydantic_deep_poc/: .gitignore  README.md  logs.txt  pyproject.toml
pydantic_deep_poc/poc/: repo_setup.py
pydantic_deep_poc/poc/agents/: confluence.py  discover.py  factory.py  github.py  implement.py  jira.py  linear.py  prompts_loader.py  supervisor.py  think_execute.py  verify.py
pydantic_deep_poc/poc/benchmarks/: _common.py  scenario_1_single.py  scenario_2_multi.py  scenario_3_streaming.py  scenario_4_quality.py  scenario_5_async.py  task_celery_to_hatchet.py  tracing_setup.py
pydantic_deep_poc/poc/comparison/: harness.py
pydantic_deep_poc/poc/config/: provider.py  settings.py  smoke_openrouter.py
pydantic_deep_poc/poc/managers/: deps.py  run_context.py
pydantic_deep_poc/poc/tools/: __init__.py  bash.py  ccm_core.py  ccm_tools.py  file_ops.py  git_tools.py  integrations.py  requirements_tools.py  shell_policy.py  web.py  (+2 more)
pydantic_deep_poc/pydantic_deep_poc.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
pydantic_deep_poc/scripts/: setup_repo.py
(+4766 files in other folders)
