[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "potpie"
version = "2.0.0"
description = "Potpie product distribution"
readme = "README.md"
requires-python = ">=3.12,<3.15"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "Potpie AI", email = "engineering@potpie.ai" }]
maintainers = [{ name = "Potpie AI", email = "engineering@potpie.ai" }]
keywords = ["ai", "agents", "code-intelligence", "knowledge-graph", "developer-tools"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development",
]
dependencies = [
    "aiohttp>=3.14.1",
    "click>=8.1.8",
    "fastapi>=0.115.0",
    "httpx>=0.28.0",
    "pillow>=10.0.0",
    "potpie-context-engine[all]==0.1.0",
    "pydantic-ai-slim>=1.102.0",
    "pydantic-settings>=2.14.2",
    "pyjwt>=2.13.0",
    "rich>=13.0",
    "sentry-sdk>=2.61.1,<3.0.0",
    "starlette>=1.3.1",
    "typer>=0.15.0",
    "uvicorn[standard]>=0.32.0",
]

[project.scripts]
potpie = "potpie.cli.main:main"
potpie-daemon = "potpie.daemon.main:main"

[project.urls]
Homepage = "https://potpie.ai"
Documentation = "https://docs.potpie.ai"
Source = "https://github.com/potpie-ai/potpie"
Issues = "https://github.com/potpie-ai/potpie/issues"

[tool.hatch.build.targets.wheel]
packages = ["potpie"]
include = [
    "potpie/cli/templates/**/*",
    "potpie/cli/ui/assets/**/*",
    "potpie/daemon/http/ui/frontend/dist/**/*",
]
exclude = [
    "/potpie/context-engine",
    "/potpie/integrations",
    "/potpie/parsing",
    "/potpie/sandbox",
]

[tool.hatch.build.force-include]
"potpie/cli/templates/claude_plugin/.claude-plugin/marketplace.json" = "potpie/cli/templates/claude_plugin/.claude-plugin/marketplace.json"
"potpie/cli/templates/claude_plugin/.claude-plugin/plugin.json" = "potpie/cli/templates/claude_plugin/.claude-plugin/plugin.json"
"potpie/cli/templates/claude_plugin/hooks/hooks.json" = "potpie/cli/templates/claude_plugin/hooks/hooks.json"

[tool.hatch.build.targets.sdist]
include = [
    "/LICENSE",
    "/README.md",
    "/pyproject.toml",
    "/scripts/generate-potpie-ascii.mjs",
    "/potpie/__init__.py",
    "/potpie/cli",
    "/potpie/daemon",
]
exclude = [
    "/.gitignore",
    "/potpie/context-engine",
    "/potpie/integrations",
    "/potpie/parsing",
    "/potpie/sandbox",
]

[tool.uv]
# litellm>=1.83.10 clears CVE-2026-40217 (<1.83.10) but pins openai==2.24.0, which conflicts with
# pydantic-ai + context-engine; override to the root stack.
override-dependencies = [
    "python-dotenv>=1.2.2",
    "openai>=2.7.1",
    "idna>=3.15",
    "cryptography>=48.0.1",
    "aiohttp>=3.14.1",
    "starlette>=1.3.1",
    "pyjwt>=2.13.0",
    "pydantic-settings>=2.14.2",
    "pydantic-ai-slim>=1.102.0",
    # CVE-2025-3000: torch <= 2.12.0; 2.12.1 is the first patched release on PyPI.
    "torch>=2.12.1",
]

[tool.uv.workspace]
members = [
    "potpie/context-engine",
    "potpie/integrations",
    "potpie/parsing",
    "potpie/sandbox",
]

[tool.uv.sources]
potpie-context-engine = { workspace = true, editable = true }

[dependency-groups]
dev = [
    "black>=26.3.1",
    "isort>=7.0.0",
    "pre-commit>=4.3.0",
    "pylint>=4.0.2",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.14.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
asyncio_mode = "auto"
markers = [
    "unit: unit tests",
    "integration: integration tests (no external services required, but exercise real third-party libs)",
    "cli_auth_e2e: opt-in live CLI auth tests (Linear/Jira/Confluence); requires RUN_CLI_AUTH_E2E=1",
    "premerge_journey: dedicated pre-merge CLI journey test (Rust required; run in premerge-cli-journey job only)",
]

[tool.ruff.lint]
extend-select = ["S"]

[tool.ruff.lint.per-file-ignores]
"potpie/cli/commands/_common.py" = ["S112"]
"potpie/cli/ui/setup_ux.py" = ["S112"]
"tests/_auth_fakes.py" = ["S108"]
"tests/unit/test_cli_linear.py" = ["S310"]
"tests/unit/test_nudge_adapter.py" = ["S102"]
