[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "potpie-cli"
version = "0.1.0"
description = "Command-line interface for local Potpie usage"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.11"
authors = [
    {name = "Potpie CLI Developer"},
]
keywords = ["potpie", "cli", "codebase", "knowledge-graph"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "requests>=2.28.0",
]

[project.scripts]
potpie = "potpie_cli:main"

[project.urls]
Homepage = "https://github.com/potpie-ai/potpie"
Repository = "https://github.com/potpie-ai/potpie"
Documentation = "https://docs.potpie.ai"

[tool.setuptools]
py-modules = ["potpie_cli"]
