[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "context-engine"
version = "0.1.0"
description = "Context graph API, webhooks, CLI, and MCP adapters (scaffold)."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "httpx>=0.28.0",
    "mcp>=1.0.0",
    "typer>=0.15.0",
    "uvicorn[standard]>=0.32.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.8.0",
]

[project.scripts]
context-engine = "adapters.inbound.cli.main:main"
context-engine-mcp = "adapters.inbound.mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/domain", "src/application", "src/adapters", "src/bootstrap"]

[tool.hatch.build.targets.sdist]
include = ["src/domain", "src/application", "src/adapters", "src/bootstrap"]

[tool.ruff]
target-version = "py313"
src = ["src", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
