[project]
name = "pydantic-deep-poc"
version = "0.1.0"
description = "PoC: pydantic-deepagents vs Potpie CodeGenAgent"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "duckduckgo-search>=8.1.1",
    "httpx>=0.28.1",
    "logfire>=3.2.0",
    "pydantic-deep>=0.2.21",
    "python-dotenv>=1.2.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["poc"]
