[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "potpie-context-engine"
version = "0.2.0"
description = "Reusable context graph engine library and optional HTTP adapters."
requires-python = ">=3.12,<3.15"
dependencies = [
    "pydantic>=2.0",
]

[project.optional-dependencies]
embedded = [
    "falkordb>=1.6.1",
    "falkordblite>=0.10.0; python_version >= '3.12'",
    "redis>=7.1,<8",
]
http = [
    "fastapi>=0.115.0",
    "httpx>=0.28.0",
    "sqlalchemy>=2.0",
    "uvicorn[standard]>=0.32.0",
]
postgres = [
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.2",
]
neo4j = [
    "neo4j>=5.28.0",
]
embeddings = [
    "sentence-transformers>=5.1.2",
]
github = [
    "pygithub>=2.8.0",
]
reconciliation = [
    "pydantic-deep>=0.3.0",
]
hatchet = [
    "hatchet-sdk>=1.29.0",
]
observability = [
    "opentelemetry-sdk>=1.27.0",
    "opentelemetry-exporter-otlp>=1.27.0",
    "opentelemetry-instrumentation-openai>=0.40b0",
]
[tool.hatch.build.targets.wheel]
packages = ["src/potpie_context_engine"]
include = [
    "src/potpie_context_engine/domain/playbooks/**/*.md",
    "src/potpie_context_engine/adapters/outbound/reconciliation/skills/**/*.md",
]

[tool.hatch.build.targets.sdist]
include = [
    "pyproject.toml",
    "src/potpie_context_engine",
    "tests",
    "benchmarks",
    "scripts/**/*.py",
    "scripts/**/*.json",
    "scripts/**/*.mjs",
]
[tool.ruff]
target-version = "py310"
src = ["src", "tests", "benchmarks", "scripts"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
asyncio_mode = "auto"
markers = [
    "unit: unit tests",
    "integration: integration tests (no external services required, but exercise real third-party libs)",
    "premerge_journey: dedicated pre-merge CLI journey test (Rust required; run in premerge-cli-journey job only)",
]

[dependency-groups]
dev = [
    "mypy>=1.19.0",
    "openai>=1.50.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=7.1.0",
    "pyyaml>=6.0",
    "ruff>=0.8.0",
]

[tool.uv]
constraint-dependencies = [
    "aiohttp>=3.14.1",
    "cryptography>=48.0.1",
    "idna>=3.15",
    "pyjwt>=2.13.0",
    "pydantic-ai-slim>=1.102.0",
    "pydantic-settings>=2.14.2",
    "python-multipart>=0.0.28",
    "starlette>=1.3.1",
    "torch>=2.12.1",
    "urllib3>=2.7.0",
]

[tool.mypy]
python_version = "3.12"
mypy_path = "src"
files = [
    "src/potpie_context_engine/domain/actor.py",
    "src/potpie_context_engine/domain/semantic_mutations.py",
    "src/potpie_context_engine/domain/ports/agent_execution_log.py",
    "src/potpie_context_engine/domain/ports/ingestion_config.py",
    "src/potpie_context_engine/application/use_cases/record_durable_context.py",
    "src/potpie_context_engine/application/use_cases/process_batch.py",
    "src/potpie_context_engine/adapters/inbound/http/api/v1/context/router.py",
    "src/potpie_context_engine/adapters/outbound/graph/backends/embedded_backend.py",
    "src/potpie_context_engine/adapters/outbound/graph/backends/neo4j_backend.py",
    "src/potpie_context_engine/adapters/outbound/postgres/agent_execution_log.py",
    "src/potpie_context_engine/adapters/outbound/postgres/batch_repository.py",
    "src/potpie_context_engine/adapters/outbound/postgres/ingestion_config.py",
    "src/potpie_context_engine/adapters/outbound/postgres/ingestion_event_store.py",
    "src/potpie_context_engine/adapters/outbound/postgres/models.py",
    "src/potpie_context_engine/adapters/outbound/reconciliation/pydantic_deep_agent.py",
]
check_untyped_defs = true
disallow_incomplete_defs = true
ignore_missing_imports = true
no_implicit_optional = true
pretty = true
show_error_codes = true
warn_redundant_casts = true
warn_unused_ignores = true
