[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.hooks.custom]
path = "distribution_defaults_hook.py"

[project]
name = "potpie-context-engine"
version = "0.1.0"
description = "Context graph API, webhooks, CLI, and MCP."
requires-python = ">=3.12,<3.15"
dependencies = [
    "fastapi>=0.115.0",
    "httpx>=0.28.0",
    "keyring>=25.0.0",
    "mcp>=1.28.1",
    "pillow>=10.0.0",
    "pydantic-settings>=2.14.2",
    "pyjwt>=2.13.0",
    "rich>=13.0",
    "starlette>=1.3.1",
    "typer>=0.15.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.0",
    "sentry-sdk>=2.61.1,<3.0.0",
    # Default CLI backend is FalkorDBLite on Python 3.12+.
    "falkordblite>=0.10.0; python_version >= '3.12'",
    # redis 8 enables maintenance notifications that break FalkorDBLite's
    # hostless embedded connection; keep the bound wherever falkordblite ships.
    "redis>=7.1,<8; python_version >= '3.12'",
]

[project.optional-dependencies]
postgres = [
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.2",
]
benchmarks = [
    "pyyaml>=6.0",
    "openai>=1.50.0",
]
graph = [
    "neo4j>=5.28.0",
]
falkordb = [
    "falkordb>=1.6.1",
    # Keep this marker for dependency metadata consumers even though Potpie
    # itself supports Python 3.12+.
    "falkordblite>=0.10.0; python_version >= '3.12'",
    "redis>=7.1,<8",
]
embeddings = [
    "sentence-transformers>=5.1.2",
]
github = [
    "pygithub>=2.8.0",
]
reconciliation-agent = [
    "pydantic-deep>=0.3.0",
    "pydantic-ai-slim>=1.102.0",
]
hatchet = [
    "hatchet-sdk>=1.29.0",
    "aiohttp>=3.14.1",
]
observability = [
    "opentelemetry-sdk>=1.27.0",
    "opentelemetry-exporter-otlp>=1.27.0",
    "opentelemetry-instrumentation-openai>=0.40b0",
]
all = [
    "aiohttp>=3.14.1",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.2",
    "neo4j>=5.28.0",
    "falkordb>=1.6.1",
    "falkordblite>=0.10.0; python_version >= '3.12'",
    "redis>=7.1,<8",
    "sentence-transformers>=5.1.2",
    "pygithub>=2.8.0",
    "pydantic-deep>=0.3.0",
    "pydantic-ai-slim>=1.102.0",
    "hatchet-sdk>=1.29.0",
    "opentelemetry-sdk>=1.27.0",
    "opentelemetry-exporter-otlp>=1.27.0",
    "opentelemetry-instrumentation-openai>=0.40b0",
]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/potpie_context_engine"]
include = [
    "src/potpie_context_engine/domain/playbooks/**/*.md",
    "src/potpie_context_engine/adapters/inbound/cli/templates/**/*.md",
    "src/potpie_context_engine/adapters/inbound/cli/templates/**/*.yaml",
    "src/potpie_context_engine/adapters/inbound/cli/ui/assets/**/*.json",
    "src/potpie_context_engine/adapters/inbound/cli/ui/assets/**/*.png",
    "src/potpie_context_engine/adapters/inbound/cli/ui/assets/**/*.svg",
    "src/potpie_context_engine/benchmarks/use_cases/**/*.yaml",
    "src/potpie_context_engine/benchmarks/fixtures/raw_events/**/*.json",
    "src/potpie_context_engine/benchmarks/_legacy/data/**/*.json",
]

[tool.hatch.build.targets.wheel.force-include]
"src/potpie_context_engine/adapters/inbound/cli/ui/assets/potpie-logo-static.json" = "potpie_context_engine/adapters/inbound/cli/ui/assets/potpie-logo-static.json"
"src/potpie_context_engine/adapters/inbound/cli/ui/assets/potpie.png" = "potpie_context_engine/adapters/inbound/cli/ui/assets/potpie.png"
"src/potpie_context_engine/adapters/inbound/cli/templates/claude_plugin/.claude-plugin/marketplace.json" = "potpie_context_engine/adapters/inbound/cli/templates/claude_plugin/.claude-plugin/marketplace.json"
"src/potpie_context_engine/adapters/inbound/cli/templates/claude_plugin/.claude-plugin/plugin.json" = "potpie_context_engine/adapters/inbound/cli/templates/claude_plugin/.claude-plugin/plugin.json"
"src/potpie_context_engine/adapters/inbound/cli/templates/claude_plugin/hooks/hooks.json" = "potpie_context_engine/adapters/inbound/cli/templates/claude_plugin/hooks/hooks.json"

[tool.hatch.build.targets.sdist]
include = [
    "build_config_values.py",
    "distribution_defaults_hook.py",
    "src/potpie_context_engine",
    "src/potpie_context_engine/domain/playbooks/**/*.md",
    "src/potpie_context_engine/adapters/inbound/cli/templates/**/*.md",
    "src/potpie_context_engine/adapters/inbound/cli/templates/**/*.yaml",
    "src/potpie_context_engine/adapters/inbound/cli/ui/assets/**/*.json",
    "src/potpie_context_engine/adapters/inbound/cli/ui/assets/**/*.png",
    "src/potpie_context_engine/adapters/inbound/cli/ui/assets/**/*.svg",
    "scripts/**/*.py",
    "scripts/**/*.json",
    "scripts/**/*.mjs",
]

[tool.hatch.build.targets.sdist.force-include]
"src/potpie_context_engine/adapters/inbound/cli/templates/claude_plugin/.claude-plugin/marketplace.json" = "src/potpie_context_engine/adapters/inbound/cli/templates/claude_plugin/.claude-plugin/marketplace.json"
"src/potpie_context_engine/adapters/inbound/cli/templates/claude_plugin/.claude-plugin/plugin.json" = "src/potpie_context_engine/adapters/inbound/cli/templates/claude_plugin/.claude-plugin/plugin.json"
"src/potpie_context_engine/adapters/inbound/cli/templates/claude_plugin/hooks/hooks.json" = "src/potpie_context_engine/adapters/inbound/cli/templates/claude_plugin/hooks/hooks.json"

[tool.ruff]
target-version = "py310"
src = ["src", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Root-level build helpers (build_config_values.py) are imported by tests but
# are not part of the src/ package.
pythonpath = ["."]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
asyncio_mode = "auto"
markers = [
    "unit: unit tests",
    "integration: integration tests (no external services required, but exercise real third-party libs)",
    "cli_auth_e2e: opt-in live CLI auth tests (Linear/Jira/Confluence); requires RUN_CLI_AUTH_E2E=1",
    "premerge_journey: dedicated pre-merge CLI journey test (Rust required; run in premerge-cli-journey job only)",
]

[dependency-groups]
dev = [
    "pytest-cov>=7.1.0",
]

[tool.uv]
constraint-dependencies = [
    "aiohttp>=3.14.1",
    "cryptography>=48.0.1",
    "idna>=3.15",
    "pyjwt>=2.13.0",
    "pydantic-ai-slim>=1.102.0",
    "pydantic-settings>=2.14.2",
    "python-multipart>=0.0.28",
    "starlette>=1.3.1",
    "torch>=2.12.1",
    "urllib3>=2.7.0",
]
