[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "potpie-integrations"
version = "0.1.0"
description = "Potpie external integrations (hexagonal layout, mirrors context-engine structure)."
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = []

[tool.hatch.build.targets.wheel]
packages = ["integrations"]

[tool.hatch.build.targets.sdist]
include = ["integrations", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
asyncio_mode = "auto"
markers = [
    "integration: HTTP/router integration tests (legacy app host)",
]
