[build-system]
requires = ["maturin>=1.13,<2.0"]
build-backend = "maturin"

[project]
name = "potpie-parsing"
requires-python = ">=3.12,<3.15"
dynamic = ["version"]
dependencies = [
    "grep-ast>=0.6.0",
    "loguru>=0.7.3",
    "networkx>=3.4.2",
    "pygments>=2.20.0",
    "tree-sitter>=0.20.4",
    "tree-sitter-language-pack>=0.13.0,<1.6.1",
]

[tool.uv]
package = true
cache-keys = [{file = "pyproject.toml"}, {file = "Cargo.toml"}, {file = "**/*.rs"}]

[tool.maturin]
python-source = "."
module-name = "parsing.parsing_rs"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-benchmark>=5.2.3",
]

[tool.basedpyright]
pythonVersion = "3.12"
