[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "potpie-sandbox"
version = "0.1.0"
description = "Potpie sandbox core with hexagonal workspace and runtime providers."
readme = "README.md"
requires-python = ">=3.10,<3.14"
license = "Apache-2.0"
authors = [{ name = "Potpie AI", email = "founders@potpie.ai" }]
maintainers = [{ name = "Potpie AI", email = "founders@potpie.ai" }]
keywords = ["ai", "developer-tools", "sandbox", "workspace", "runtime"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
]
dependencies = []

[project.urls]
Homepage = "https://potpie.ai"
Documentation = "https://docs.potpie.ai"
Source = "https://github.com/potpie-ai/potpie"
Issues = "https://github.com/potpie-ai/potpie/issues"

[project.optional-dependencies]
daytona = ["daytona>=0.134.0"]
dev = ["pytest>=9.0.3", "pytest-asyncio>=0.24.0", "ruff>=0.8.0"]

[project.scripts]
# Exposes the in-sandbox parser shim on PATH for the local sandbox
# runtime. The Daytona image baked from images/agent-sandbox/Dockerfile
# installs the same entry point — ProjectSandbox.parse() calls
# `potpie-parse` regardless of backend, and this is what makes that
# uniform call work in local mode without an extra installation step.
potpie-parse = "sandbox.parser_runner.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["sandbox"]

[tool.hatch.build.targets.sdist]
include = ["README.md", "sandbox", "tests"]

[tool.ruff]
target-version = "py310"
src = [".", "tests"]

[tool.ruff.lint]
extend-select = ["S"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
asyncio_mode = "auto"
markers = [
    "unit: unit tests",
]

[tool.uv]
constraint-dependencies = [
    "idna>=3.15",
    "python-multipart>=0.0.28",
    "urllib3>=2.7.0",
]
